--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.3.5",
+    "body-parser": "^1.12.2",
+    "cookie-parser": "^1.3.4",
+    "cookie-session": "^1.1.0",
+    "d3": "^3.5.5",
     "ejs": "*",
+    "express": "^4.12.3",
+    "jade": "^1.9.2",
+    "mongoose": "^3.8.25",
+    "morgan": "^1.5.2",
     "passport": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "passport-local-mongoose": "^1.0.0"
   }
 }
