--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "postinstall": "bower install"
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
     "body-parser": "^1.12.2",
+    "bower": "^1.4.1",
     "cookie-parser": "^1.3.4",
     "cookie-session": "^1.1.0",
     "d3": "^3.5.5",
