--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "angular-route": "~1.3.15",
     "angular-sanitize": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular-ui": "~0.4.0",
+    "angular-bootstrap": "~0.13.0"
   }
 }
