--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.5.2",
     "passport": "*",
     "passport-local": "*",
-    "passport-local-mongoose": "^1.0.0"
+    "passport-local-mongoose": "^1.0.0",
+    "socket.io": "^1.3.5"
   }
 }
