--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "cookie-parser": "^1.3.4",
     "cookie-session": "^1.1.0",
     "d3": "^3.5.5",
+    "edit-google-spreadsheet": "^0.2.19",
     "ejs": "*",
     "express": "^4.12.3",
+    "google-spreadsheet": "^0.3.1",
+    "googleapis": "^2.0.5",
     "jade": "^1.9.2",
     "mongoose": "^3.8.25",
     "morgan": "^1.5.2",
