--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "bootstrap": "~3.3.4",
     "angular-ui-router": "~0.2.13",
     "angular-ui": "~0.4.0",
-    "angular-bootstrap": "~0.13.0"
+    "angular-bootstrap": "~0.13.0",
+    "d3": "~3.5.5",
+    "smartquotesjs": "https://github.com/kellym/smartquotesjs.git"
   }
 }
