--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "AuthenticationAngularJS",
+  "name": "Grand Tour Explorer",
   "version": "0.0.0",
-  "homepage": "https://github.com/Anomen/AuthenticationAngularJS",
+  "homepage": "",
   "authors": [
     "giorgiocaviglia <giorgio.caviglia@gmail.com>"
   ],
@@ -22,6 +22,8 @@
     "angular-ui": "~0.4.0",
     "angular-bootstrap": "~0.13.0",
     "d3": "~3.5.5",
-    "smartquotesjs": "https://github.com/kellym/smartquotesjs.git"
+    "smartquotesjs": "https://github.com/kellym/smartquotesjs.git",
+    "angular-animate": "~1.4.3",
+    "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git"
   }
 }
