--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "AuthenticationInAngularJS",
+  "name": "Grand Tour Explorer",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -18,6 +18,7 @@
     "google-spreadsheet": "^0.3.1",
     "googleapis": "^2.0.5",
     "jade": "^1.9.2",
+    "jsondiffpatch": "^0.1.33",
     "mongoose": "^4.0.0",
     "morgan": "^1.5.2",
     "passport": "*",
