--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "GrandTourExplorer",
+  "name": "AuthenticationInAngularJS",
   "version": "0.0.1",
   "private": true,
   "scripts": {
