--- a/bower.json
+++ b/bower.json
@@ -25,5 +25,10 @@
     "smartquotesjs": "https://github.com/kellym/smartquotesjs.git",
     "angular-animate": "~1.4.3",
     "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git"
+  },
+  "resolutions": {
+    "d3": "~3.5.5",
+    "angular" : "~1.3.15",
+    "bootstrap": "~3.3.4"
   }
 }
