--- a/bower.json
+++ b/bower.json
@@ -24,11 +24,12 @@
     "d3": "~3.5.5",
     "smartquotesjs": "https://github.com/kellym/smartquotesjs.git",
     "angular-animate": "~1.4.3",
-    "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git"
+    "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git",
+    "crossfilter": "~1.3.11"
   },
   "resolutions": {
     "d3": "~3.5.5",
-    "angular" : "~1.3.15",
+    "angular": "~1.3.15",
     "bootstrap": "~3.3.4"
   }
 }
