--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "edit-google-spreadsheet": "^0.2.19",
     "ejs": "*",
     "express": "^4.12.3",
-    "google-spreadsheet": "^0.3.1",
-    "googleapis": "^2.0.5",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^16.1.0",
     "jade": "^1.9.2",
     "jsondiffpatch": "^0.1.33",
-    "mongoose": "^4.0.0",
+    "mongoose": "^4.8.4",
     "morgan": "^1.5.2",
     "passport": "*",
     "passport-local": "*",
