--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,7 @@
   },
   "resolutions": {
     "d3": "~3.5.5",
-    "angular": "~1.3.15",
+    "angular": "1.4.14",
     "bootstrap": "~3.3.4"
   }
 }
