Wrote code to format entries for Google Sheets export.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "postinstall": "./node_modules/bower/bin/bower install",
-    "start-dev": "heroku local -f Procfile.dev"
+    "dev-start": "heroku local -f Procfile.dev"
   },
   "dependencies": {
     "body-parser": "^1.12.2",
