--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.15",
+    "angular-legacy-sortablejs": "https://github.com/SortableJS/angular-legacy-sortablejs.git",
     "angular-route": "~1.3.15",
     "angular-sanitize": "~1.3.15",
     "bootstrap": "~3.3.4",
