--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git",
     "crossfilter": "~1.3.11",
     "jszip": "Stuk/jszip#~2.5.0",
-    "FileSaver": "*"
+    "FileSaver": "*",
+    "Sortable": "1.5"
   },
   "resolutions": {
     "d3": "~3.5.5",
