--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,7 @@
     "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git",
     "crossfilter": "~1.3.11",
     "jszip": "Stuk/jszip#~2.5.0",
-    "FileSaver": "*",
+    "FileSaver": "1.3.4",
     "Sortable": "1.5",
     "ckeditor": "^4.7.1"
   },
