--- a/package.json
+++ b/package.json
@@ -8,17 +8,32 @@
     "dev-start": "heroku local -f Procfile.dev"
   },
   "dependencies": {
+    "angular": "~1.3.15",
+    "angular-animate": "~1.4.3",
+    "angular-bootstrap": "~0.12.2",
+    "angular-legacy-sortablejs": "https://github.com/SortableJS/angular-legacy-sortablejs.git",
+    "angular-legacy-sortablejs-maintained": "^0.6.2",
+    "angular-route": "~1.3.15",
+    "angular-sanitize": "~1.3.15",
+    "angular-ui": "~1.0.0",
+    "angular-ui-router": "~0.2.13",
     "body-parser": "^1.12.2",
-    "bower": "^1.8.4",
+    "bootstrap": "~3.3.4",
+    "ckeditor": "^4.7.1",
     "cookie-parser": "^1.3.4",
     "cookie-session": "^1.1.0",
+    "crossfilter": "~1.3.11",
     "d3": "^3.5.5",
     "edit-google-spreadsheet": "^0.2.19",
     "ejs": "*",
+    "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git",
     "express": "^4.12.3",
+    "file-saver": "2.0.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^16.1.0",
+    "jquery": "^3.3.1",
     "jsondiffpatch": "^0.1.33",
+    "jszip": "^3.1.5",
     "memory-cache": "^0.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.5.2",
@@ -26,7 +41,8 @@
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
-    "socket.io": "^1.3.5"
+    "socket.io": "^1.3.5",
+    "sortablejs": "1.7.0"
   },
   "engines": {
     "node": "8.4.0"
