--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js",
-    "postinstall": "./node_modules/bower/bin/bower install",
-    "dev-start": "heroku local -f Procfile.dev"
+    "start": "npm run dev-start",
+    "heroku-postbuild": "webpack --mode=production",
+    "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\""
   },
   "dependencies": {
-    "angular": "~1.3.15",
+    "@angular/common": "^7.0.4",
+    "@angular/core": "^7.0.4",
+    "angular": "^1.3.15",
     "angular-animate": "~1.4.3",
     "angular-bootstrap": "~0.12.2",
-    "angular-legacy-sortablejs": "https://github.com/SortableJS/angular-legacy-sortablejs.git",
     "angular-legacy-sortablejs-maintained": "^0.6.2",
     "angular-route": "~1.3.15",
     "angular-sanitize": "~1.3.15",
     "angular-ui": "~1.0.0",
+    "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "~0.2.13",
     "body-parser": "^1.12.2",
     "bootstrap": "~3.3.4",
@@ -31,6 +33,7 @@
     "file-saver": "2.0.0",
     "google-auth-library": "^0.10.0",
     "googleapis": "^16.1.0",
+    "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.3.1",
     "jsondiffpatch": "^0.1.33",
     "jszip": "^3.1.5",
@@ -41,13 +44,20 @@
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
+    "pug-loader": "^2.4.0",
     "socket.io": "^1.3.5",
-    "sortablejs": "1.7.0"
+    "sortablejs": "1.7.0",
+    "webpack": "^4.26.0"
   },
   "engines": {
     "node": "8.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "concurrently": "^4.1.0",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-pug-plugin": "^0.3.0",
+    "nodemon": "^1.11.0",
+    "webpack-cli": "^3.1.2"
   }
 }
