--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
-    "pug-loader": "^2.4.0",
     "socket.io": "^1.3.5",
     "sortablejs": "1.7.0",
     "webpack": "^4.26.0"
@@ -55,9 +54,11 @@
   "devDependencies": {
     "concurrently": "^4.1.0",
     "css-loader": "^1.0.1",
+    "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "html-webpack-pug-plugin": "^0.3.0",
     "nodemon": "^1.11.0",
+    "pug-loader": "^2.4.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.1.2"
   }
