--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "dependencies": {
     "@angular/common": "^7.0.4",
     "@angular/core": "^7.0.4",
+    "@angular/platform-browser": "^7.0.4",
+    "@angular/platform-browser-dynamic": "^7.0.4",
+    "@angular/router": "^7.0.4",
+    "@angular/upgrade": "^7.0.4",
     "angular": "^1.3.15",
     "angular-animate": "~1.4.3",
     "angular-bootstrap": "~0.12.2",
@@ -44,16 +48,20 @@
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
+    "reflect-metadata": "^0.1.12",
     "socket.io": "^1.3.5",
     "sortablejs": "1.7.0",
-    "webpack": "^4.26.0"
+    "webpack": "^4.26.0",
+    "zone.js": "^0.8.26"
   },
   "engines": {
     "node": "8.4.0"
   },
   "devDependencies": {
+    "@angular/compiler": "^7.0.4",
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
+    "@types/node": "^10.12.9",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "css-loader": "^1.0.1",
@@ -63,6 +71,8 @@
     "nodemon": "^1.11.0",
     "pug-loader": "^2.4.0",
     "style-loader": "^0.23.1",
+    "ts-loader": "^5.3.0",
+    "typescript": "^3.1.6",
     "webpack-cli": "^3.1.2"
   }
 }
