--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "pug": "^2.0.0-rc.2",
     "reflect-metadata": "^0.1.12",
     "socket.io": "^1.3.5",
+    "socket.io-client": "^2.1.1",
     "sortablejs": "1.7.0",
     "webpack": "^4.26.0",
     "zone.js": "^0.8.26"
