--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npm run dev-start",
+    "start": "node app.js",
     "heroku-postbuild": "webpack --mode=production",
     "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\""
   },
@@ -44,11 +44,14 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.5.2",
+    "ngdatasheet": "^0.5.1",
     "passport": "*",
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
     "reflect-metadata": "^0.1.12",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "socket.io": "^1.3.5",
     "socket.io-client": "^2.1.1",
     "sortablejs": "1.7.0",
