--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "heroku-postbuild": "webpack --mode=development",
     "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\"",
     "prod-local": "webpack --mode=production && heroku local -f Procfile.dev"
-    
   },
   "dependencies": {
     "@angular/common": "^7.0.4",
@@ -16,6 +15,7 @@
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
     "@angular/upgrade": "^7.0.4",
+    "@epicfaace/ngdatasheet": "^0.6.1",
     "angular": "^1.3.15",
     "angular-animate": "~1.4.3",
     "angular-bootstrap": "~0.12.2",
@@ -46,14 +46,11 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.5.2",
-    "ngdatasheet": "^0.5.1",
     "passport": "*",
     "passport-local": "*",
     "passport-local-mongoose": "^1.0.0",
     "pug": "^2.0.0-rc.2",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
     "socket.io": "^1.3.5",
     "socket.io-client": "^2.1.1",
     "sortablejs": "1.7.0",
