--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node app.js",
-    "heroku-postbuild": "webpack --mode=development",
-    "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\"",
+    "heroku-postbuild": "webpack --mode=production",
+    "dev-start": "concurrently --kill-others \"webpack --colors --mode=production --watch\" \"heroku local -f Procfile.dev\"",
     "prod-local": "webpack --mode=production && heroku local -f Procfile.dev"
   },
   "dependencies": {
