fix package json

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node app.js",
     "heroku-postbuild": "webpack --mode=production",
-    "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\"",
-    "prod-local": "webpack --mode=production && heroku local -f Procfile.dev"
+    "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\""
   },
   "dependencies": {
     "@angular/common": "^7.0.4",
