--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/router": "^7.0.4",
     "@angular/upgrade": "^7.0.4",
     "@epicfaace/ngdatasheet": "^0.6.1",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "angular": "^1.3.15",
     "angular-animate": "~1.4.3",
     "angular-bootstrap": "~0.12.2",
