Fix requests for edit page

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@types/node": "^10.12.9",
+    "apply-loader": "^2.0.0",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "css-loader": "^1.0.1",
