--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jquery": "^3.3.1",
     "jsondiffpatch": "^0.1.33",
     "jszip": "^3.1.5",
+    "lodash": "^4.17.11",
     "memory-cache": "^0.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.5.2",
