--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js",
     "heroku-postbuild": "npm test && webpack --mode=production",
     "dev-start": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.dev\"",
+    "debug": "concurrently --kill-others \"webpack --colors --mode=development --watch\" \"heroku local -f Procfile.debug\"",
     "test": "jest"
   },
   "dependencies": {
