--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "html-webpack-pug-plugin": "^0.3.0",
     "jest": "^23.6.0",
     "nodemon": "^1.11.0",
+    "prettier": "^1.16.4",
     "pug-loader": "^2.4.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.0",
