--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "babel-loader": "^8.0.4",
     "concurrently": "^4.1.0",
     "css-loader": "^1.0.1",
+    "csvtojson": "^2.0.8",
     "expose-loader": "^0.7.5",
     "file-loader": "^2.0.0",
     "html-webpack-pug-plugin": "^0.3.0",
