--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "angular-ui-bootstrap": "^2.5.6",
     "angular-ui-router": "~0.2.13",
     "body-parser": "^1.12.2",
-    "bootstrap": "~3.3.4",
+    "bootstrap": "^3.4.1",
     "ckeditor": "^4.7.1",
     "cookie-parser": "^1.3.4",
     "cookie-session": "^1.1.0",
