upgrade passport dependencies

--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "memory-cache": "^0.2.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
-    "passport": "*",
-    "passport-local": "*",
-    "passport-local-mongoose": "^1.0.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "pug": "^2.0.0-rc.2",
     "reflect-metadata": "^0.1.12",
     "socialcalc": "^2.3.0",
