--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@angular/common": "^7.0.4",
     "@angular/core": "^7.0.4",
+    "@angular/forms": "^7.2.15",
     "@angular/platform-browser": "^7.0.4",
     "@angular/platform-browser-dynamic": "^7.0.4",
     "@angular/router": "^7.0.4",
