--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "lodash": "^4.17.19",
     "mapbox-gl": "^1.4.1",
     "memory-cache": "^0.2.0",
+    "mongodb": "^3.6.3",
     "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
     "passport": "*",
