--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,13 +18,14 @@ jobs:
       - run: npm i
       - run: npm test
       - run: npx webpack --mode=production
+      - run: rsync -av --progress . /tmp/build --exclude node_modules --exclude .git
       - name: Deploy to GitHub Pages
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           keep_history: false
           target_branch: build
-          build_dir: .
+          build_dir: /tmp/build
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
 
@@ -35,8 +36,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
         with:
-          python-version: 3.10
+          python-version: "3.10"
       - run: pip install -r requirements.txt
         working-directory: python_scripts
       - run: pytest
         working-directory: python_scripts
+
+
