Build book code

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,17 @@ jobs:
           node-version: 14.x
       - run: npm i
       - run: npm test
-      - run: npx webpack --mode=production
-      - run: rsync -av --progress . /tmp/build --exclude node_modules --exclude .git --exclude .gitignore
+      - name: Build Explorer JS code
+        run: npx webpack --mode=production
+      - name: Copy Explorer code
+        run: rsync -av --progress . /tmp/build --exclude node_modules --exclude .git --exclude .gitignore
+      - name: Build Book code
+        uses: actions/jekyll-build-pages@v1.0.7
+        with:
+          source: ./book
+          destination: ./build/book
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/book'
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           keep_history: false
