--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1.0.7
         with:
           source: ./book
-          destination: ./build/book
-      - run: ls -r ./build/book
+          destination: /tmp/build/book
       - name: Deploy to GitHub Pages
         # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v3.1.0
