--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,12 @@ jobs:
         uses: actions/jekyll-build-pages@v1.0.7
         with:
           source: ./book
-          destination: /tmp/build/book
+          destination: build/book
+      - name: Copy Book code
+        run: cp -R build/book /tmp/build/book
       - name: Deploy to GitHub Pages
-        # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        # uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           keep_history: true
           target_branch: build
