--- a/gt-book/_config.yml
+++ b/gt-book/_config.yml
@@ -12,6 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Sometihng
 baseurl: "/gt-book" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
+permalink: /:categories/:title
 
 # Build settings
 markdown: kramdown
