--- a/gt-book/_config.yml
+++ b/gt-book/_config.yml
@@ -12,7 +12,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Sometihng
 baseurl: "/gt-book" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
-permalink: /:categories/:title
+permalink: pretty
 
 # Build settings
 markdown: kramdown
