--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         run: cp -R build/gt-book /tmp/build/gt-book
       - run: ls -R /tmp/build/gt-book
       - name: Deploy to GitHub Pages
-        # if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           keep_history: true
