--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jquery": "^3.7.0",
     "jsondiffpatch": "^0.1.33",
+    "jstransformer-markdown-it": "^3.0.0",
     "jszip": "^2.6.1",
     "lodash": "^4.17.21",
     "mapbox-gl": "^1.4.1",
