--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ejs": "^3.1.9",
     "elastic-list": "https://github.com/sirisacademic/d3-elastic-list.git",
     "express": "^4.18.2",
+    "express-http-proxy": "^2.0.0",
     "file-saver": "2.0.0",
     "force-ssl-heroku": "^1.0.2",
     "google-auth-library": "^0.10.0",
