--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,14 +22,15 @@ jobs:
         run: npx webpack --mode=production
       - name: Copy Explorer code
         run: rsync -av --progress . /tmp/build --exclude node_modules --exclude .git --exclude .gitignore --exclude gt-book --exclude .github/workflows
-      - name: Build Book code
-        uses: actions/jekyll-build-pages@v1.0.7
-        with:
-          source: gt-book
-          destination: build/gt-book
-      - name: Copy Book code
-        run: cp -R build/gt-book /tmp/build/gt-book
-      - run: ls -R /tmp/build/gt-book
+      # Book code is already built in _site
+      # - name: Build Book code
+      #   uses: actions/jekyll-build-pages@v1.0.7
+      #   with:
+      #     source: gt-book
+      #     destination: build/gt-book
+      # - name: Copy Book code
+      #   run: cp -R build/gt-book /tmp/build/gt-book
+      # - run: ls -R /tmp/build/gt-book
       - name: Deploy to GitHub Pages
         if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: crazy-max/ghaction-github-pages@v3.1.0
